--- a/styles.scss
+++ b/styles.scss
@@ -13,9 +13,9 @@ $font-weight-base: 700;
 $font-family-base: 'Comic Neue', cursive !default;
 
 //lintern would not allow to use bootstrap variables directly, so...
-$b-primary: #0e00d9;
-$b-secondary: #6c757d;
-$b-success: #28a745;
+$b-primary: #d3d3d3;
+$b-secondary: #272a31;
+$b-success: #ec5242;
 $b-info: #17a2b8;
 $b-warning: #ffc107;
 $b-danger: #dc3545;
