--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 //bootstrap variables
 
@@ -7,10 +7,17 @@ $grid-gutter-width: 0;
 $spacer: 1rem;
 
 //custom font variables
+
+@font-face {
+  font-family: 'Cocogoose';
+  src: url('./assets/fonts/Cocogoose_trial.otf') format('truetype');
+}
+
 $font-size-mob: 14px;
 $font-size-tab: $font-size-mob * 1.2;
 $font-weight-base: 700;
-$font-family-base: 'Comic Neue', cursive !default;
+$font-family-base: 'Cocogoose', serif;
+$font-family-lato: 'Lato', sans-serif !default;
 
 //lintern would not allow to use bootstrap variables directly, so...
 $b-primary: #d3d3d3;
@@ -19,8 +26,8 @@ $b-success: #ec5242;
 $b-info: #17a2b8;
 $b-warning: #ffc107;
 $b-danger: #dc3545;
-$b-light: #f8f9fa;
-$b-dark: #343a40;
+$b-light: #d3d3d3;
+$b-dark: #272a31;
 
 $b-breakpoint-md: 768px;
 
@@ -37,6 +44,7 @@ $theme-colors: (
 
 body {
   font-size: $font-size-mob;
+  font-family: 'Lato', sans-serif;
 
   a {
     text-decoration: none;
@@ -51,36 +59,43 @@ body {
 h1 {
   font-size: $font-size-mob * 1.5;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 h2 {
   font-size: $font-size-mob * 1.4;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 h3 {
   font-size: $font-size-mob * 1.3;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 h4 {
   font-size: $font-size-mob * 1.2;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 h5 {
   font-size: $font-size-mob * 1.1;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 h6 {
   font-size: $font-size-mob * 1;
   font-weight: $font-weight-base;
+  font-family: 'Cocogoose', serif;
 }
 
 p {
   font-size: $font-size-mob * 1;
   line-height: 1.1;
+  font-family: 'Lato', sans-serif;
 }
 
 //tablet-size
@@ -91,37 +106,30 @@ p {
 
   h1 {
     font-size: $font-size-tab * 1.5;
-    font-weight: $font-weight-base;
   }
 
   h2 {
     font-size: $font-size-tab * 1.4;
-    font-weight: $font-weight-base;
   }
 
   h3 {
     font-size: $font-size-tab * 1.3;
-    font-weight: $font-weight-base;
   }
 
   h4 {
     font-size: $font-size-tab * 1.2;
-    font-weight: $font-weight-base;
   }
 
   h5 {
     font-size: $font-size-tab * 1.1;
-    font-weight: $font-weight-base;
   }
 
   h6 {
     font-size: $font-size-tab * 1;
-    font-weight: $font-weight-base;
   }
 
   p {
     font-size: $font-size-tab * 1;
-    line-height: 1.1;
   }
 }
 
