--- a/styles.scss
+++ b/styles.scss
@@ -104,6 +104,10 @@ body {
   font-family: $font-family-lato;
 }
 
+.w80 {
+  width: 80%;
+}
+
 .dragon-bg {
   background-image: url("assets/background.jpg");
   background-repeat: no-repeat;
@@ -117,7 +121,7 @@ body {
 }
 
 .fog {
-  background: linear-gradient(to bottom, rgba(241, 241, 241, 0.5), $b-light 40%);
+  background: linear-gradient(to bottom, rgba(241, 241, 241, 0.4), $b-light 40%);
   top: 0;
   left: 0;
   right: 0;
@@ -163,6 +167,25 @@ body {
     p {
       font-size: $font-size-tab * 1;
     }
+
+    main {
+      width: 80%;
+    }
+  }
+
+  .dragon-bg {
+    background-position: center;
+    background-size: cover;
+    z-index: -5;
+  }
+
+  .fog {
+    background: linear-gradient(to bottom, rgba(241, 241, 241, 0), $b-light 60%);
+    z-index: -4;
+  }
+
+  .spacer {
+    margin: 150px;
   }
 }
 
