--- a/styles.scss
+++ b/styles.scss
@@ -44,6 +44,7 @@ body {
 
     &:hover {
       text-decoration: none;
+      color: $b-primary;
     }
   }
 
@@ -108,25 +109,40 @@ body {
   width: 80%;
 }
 
-.dragon-bg {
-  background-image: url("assets/background.jpg");
+%background-images {
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: right top;
-  background-size: 768px 300px;
+  background-position: center;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+.dragon-bg {
+  @extend %background-images;
+
+  background-image: url("assets/background.jpg");
+  background-position: right top;
+  background-size: 768px 300px;
   z-index: -2;
 }
 
 .fog {
+  @extend %background-images;
+
   background: linear-gradient(to bottom, rgba(241, 241, 241, 0.4), $b-light 40%);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   z-index: -1;
+}
+
+.treasure {
+  @extend %background-images;
+
+  background: url('assets/treasure.jpg');
+}
+
+.translucid {
+  opacity: 0.7;
 }
 
 .spacer {
@@ -170,6 +186,9 @@ body {
 
     ul {
       list-style: none;
+      display: flex;
+      align-items: center;
+      margin: 0;
 
       li {
         padding-left: 5px;
@@ -177,14 +196,20 @@ body {
       }
     }
 
+    header {
+      position: sticky;
+    }
+
     main {
       width: 80%;
+      margin-top: 75px;
     }
   }
 
   .dragon-bg {
     background-position: center;
     background-size: cover;
+    top: 75px;
     z-index: -5;
   }
 
