--- a/styles.scss
+++ b/styles.scss
@@ -174,6 +174,11 @@ body {
   background: blue;
 }
 
+.spacer-about {
+  margin: 5%;
+  background: blue;
+}
+
 .program-grid {
   display: grid;
   grid-template-columns: 1fr;
