--- a/styles.scss
+++ b/styles.scss
@@ -195,6 +195,12 @@ body {
   z-index: -1;
 }
 
+.sponsor-holder {
+  width: 95%;
+  max-width: 300px;
+  border: 1px solid $b-secondary;
+}
+
 //tablet-size
 
 @media (min-width: $b-breakpoint-md) {
