--- a/styles.scss
+++ b/styles.scss
@@ -157,24 +157,6 @@ body {
   background: url('assets/treasure.jpg');
 }
 
-.sponsor-bg-blizz {
-  @extend %background-images;
-
-  width: 300px;
-  background: url('assets/blizzcon-2020.jpg') no-repeat;
-  background-size: 300px auto;
-  z-index: -2;
-}
-
-.sponsor-bg-wolf {
-  @extend %background-images;
-
-  width: 300px;
-  background: url('assets/wod-latino.png') no-repeat;
-  background-size: 300px auto;
-  z-index: -2;
-}
-
 .translucid {
   opacity: 0.7;
 }
@@ -238,6 +220,43 @@ body {
   background-color: $b-primary;
   opacity: 0.8;
   z-index: -1;
+}
+
+.sponsor-bg-blizz {
+  @extend %background-images;
+
+  width: 300px;
+  background: url('assets/blizzcon-2020.jpg') no-repeat;
+  background-size: 300px auto;
+  z-index: -1;
+}
+
+.sponsor-bg-wolf {
+  @extend %background-images;
+
+  width: 300px;
+  background: url('assets/wod-latino.png') no-repeat;
+  background-size: 300px auto;
+  z-index: -1;
+}
+
+//Tickets classes
+
+.lion-bg-tickets {
+  @extend %background-images;
+
+  background-image: url("assets/lion.png");
+  background-position: right;
+  background-size: auto 600px;
+  top: 0;
+  opacity: 0.1;
+  z-index: -1;
+}
+
+.ticket-step {
+  display: flex;
+  flex-flow: column;
+  border: $b-dark solid 1px;
 }
 
 //tablet-size
@@ -358,6 +377,17 @@ body {
   .bot-bar-about {
     background-color: $b-dark;
     color: $b-secondary;
+  }
+
+  //Tickets classes
+
+  .lion-bg-tickets {
+    top: 10%;
+  }
+
+  .ticket-step {
+    flex-flow: row;
+    border-radius: 100px;
   }
 }
 
