--- a/styles.scss
+++ b/styles.scss
@@ -192,8 +192,8 @@ body {
 }
 
 .big-container {
-  background: $b-light;
-  z-index: -3;
+  background: transparent;
+  z-index: 0;
 }
 
 .bot-bar-about {
@@ -246,8 +246,8 @@ body {
   @extend %background-images;
 
   background-image: url("assets/lion.png");
-  background-position: right;
-  background-size: auto 600px;
+  background-position: bottom right;
+  background-size: auto 500px;
   top: 0;
   opacity: 0.1;
   z-index: -1;
@@ -257,6 +257,16 @@ body {
   display: flex;
   flex-flow: column;
   border: $b-dark solid 1px;
+}
+
+.w150px {
+  width: 150px;
+}
+
+.check-day {
+  width: 30px;
+  height: 30px;
+  z-index: 100;
 }
 
 //tablet-size
@@ -399,6 +409,7 @@ body {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto;
+    background: white;
   }
 
   .cell {
