--- a/styles.scss
+++ b/styles.scss
@@ -338,6 +338,11 @@ body {
     }
   }
 
+  .nav-logo {
+    width: auto;
+    height: 50px;
+  }
+
   .dragon-bg {
     background-position: center;
     background-size: cover;
