--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@ body p {
   font-weight: 400;
 }
 
+body main .border-radius-50 {
+  border-radius: 50%;
+}
+
 .uppercase {
   text-transform: capitalize;
 }
