--- a/styles.scss
+++ b/styles.scss
@@ -99,6 +99,12 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
   }
+
+  main {
+    .border-radius-50 {
+      border-radius: 50%;
+    }
+  }
 }
 
 .uppercase {
