--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,16 @@ body main .border-radius-50 {
   border-radius: 50%;
 }
 
+body main .program-link {
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+body main .speaker-more {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 .uppercase {
   text-transform: capitalize;
 }
@@ -132,6 +142,11 @@ body main .border-radius-50 {
   background-size: contain;
   opacity: 0.1;
   z-index: -1;
+}
+
+.speaker-portrait {
+  height: 90px;
+  width: 90px;
 }
 
 .sponsor-holder {
