--- a/styles.scss
+++ b/styles.scss
@@ -104,6 +104,16 @@ body {
     .border-radius-50 {
       border-radius: 50%;
     }
+
+    .program-link {
+      text-decoration: underline;
+      text-transform: uppercase;
+    }
+
+    .speaker-more {
+      text-decoration: none;
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -186,6 +196,11 @@ body {
   background-size: contain;
   opacity: 0.1;
   z-index: -1;
+}
+
+.speaker-portrait {
+  height: 90px;
+  width: 90px;
 }
 
 //About classes
