--- a/styles.scss
+++ b/styles.scss
@@ -114,6 +114,18 @@ body {
       text-decoration: none;
       text-transform: uppercase;
     }
+
+    .sponsor-holder {
+      width: 95%;
+      max-width: 300px;
+      height: 157px;
+      border: 1px solid $b-secondary;
+    }
+
+    .sponsor-pic {
+      width: auto;
+      height: 125px;
+    }
   }
 }
 
@@ -204,13 +216,6 @@ body {
 }
 
 //About classes
-
-.sponsor-holder {
-  width: 95%;
-  max-width: 300px;
-  height: 157px;
-  border: 1px solid $b-secondary;
-}
 
 .big-container {
   background: transparent;
