--- a/styles.scss
+++ b/styles.scss
@@ -127,6 +127,18 @@ body {
       height: 125px;
     }
   }
+
+  footer {
+    .footer-logo {
+      width: auto;
+      height: 75px;
+    }
+
+    .footer-bottom-logo {
+      width: auto;
+      height: 90px;
+    }
+  }
 }
 
 .uppercase {
