--- a/styles.scss
+++ b/styles.scss
@@ -150,6 +150,7 @@ body {
 }
 
 %background-images {
+  position: absolute;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -176,7 +177,7 @@ body {
   z-index: -1;
 }
 
-.dark-bg {
+.program-item-bg {
   @extend %background-images;
 
   background-color: $b-dark;
@@ -249,7 +250,7 @@ body {
 
   background-color: $b-light;
   opacity: 0.8;
-  z-index: -3;
+  z-index: -2;
 }
 
 .red-fog {
