--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ body footer .footer-bottom-logo {
   background-image: url("assets/lion.png");
   background-size: contain;
   opacity: 0.1;
-  z-index: -1;
+  z-index: 0;
 }
 
 .speaker-portrait {
@@ -175,6 +175,7 @@ body footer .footer-bottom-logo {
 .big-container {
   background: transparent;
   z-index: 0;
+  position: relative;
 }
 
 .bot-bar-about {
@@ -220,6 +221,12 @@ body footer .footer-bottom-logo {
   top: 0;
   opacity: 0.1;
   z-index: -1;
+}
+
+.big-container-tickets {
+  background: transparent;
+  z-index: 0;
+  position: relative;
 }
 
 .ticket-step {
